<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <DUT Name="RecipeStep" Id="{c67477fa-59d3-43d0-9335-dff43a63186e}">
    <Declaration><![CDATA[TYPE RecipeStep :
STRUCT
	sRecipe : STRING(GVL_CONSTANT.MaxRecipeNameLength);
	iRecipe : ARRAY[1..GVL_CONSTANT.RecipeNumReactorCondition] OF INT; //Reactor Condition
	rRecipe : ARRAY[1..GVL_CONSTANT.NumAnalogController] OF REAL; //MFC, EPC Data
	cTemp 	: REAL := 0; 	
	dRecipe : DWORD; //Valve Data
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>